@@ -2,6 +2,8 @@ Revision history for perl distribution Mojo-Redis
 
 3.17 Not Released
  - Made connection-lost.t more robust
+ - Add xread_structured() method
+ - Add failing test for xread and Protocol::Redis::XS
 
 3.16 2018-12-14T19:39:18+0900
  - Fix $db object from reconnecting #33
